# opencv-wrapper-egbis

./: .gitignore  CMakeLists.txt
egbis/src/: egbis.cpp
